Анимации ввода пароля, логина

--- a/css/login&registration.css
+++ b/css/login&registration.css
@@ -31,11 +31,19 @@
 
     
 }
+.error_text {
+    margin-top: 6px;
+    color: #F42222;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'CirceRegular';
+    visibility: hidden;
+}
 .input_email {
     margin-top: 28px;
 }
 .input_password {
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .forget_password {
@@ -51,7 +59,7 @@
     text-align: left;
 }
 
-.eneter_button {
+.enter_button {
     font-family: 'CirceRegular';
     cursor: pointer;
     font-size: 24px;
