--- a/css/main_page.css
+++ b/css/main_page.css
@@ -48,14 +48,18 @@ main {
 
 .course_list {
     display: flex;
-
 }
 
-.course_list li:first-child{
+.course_type_btn_active {
     background: #008B9B;
     color: #FFFFFF;
     border: none;
+}
 
+.course_age_btn_active {
+    background: #008B9B;
+    color: #FFFFFF;
+    border: none;
 }
 
 .course_list li:last-child {
@@ -94,16 +98,24 @@ main {
 }
 
 .courses_container {
+    overflow: hidden;
     display: flex;
     margin-top: 20px;
     width: 100%;
     height: 324px;
 }
 
+.courses-line {
+    display: flex;
+    position: relative;
+    right: 0;
+    transition: all ease 1s;
+}
+
 .course_card {
     cursor: pointer;
     height: 306px;
-    max-width: 270px;
+    max-width: 267px;
     width: 100%;
     border: 1px solid #000000;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
@@ -137,15 +149,39 @@ main {
     line-height: 21px;
 }
 
-.idk_what_is_that {
+.slider_btns_line {
     height: 16px;
-    width: 100px;
+    width: 124px;
     fill: #000000;
-    border: 2px solid #000000;
     border-radius: 25px;
     margin: 0 auto;
     margin-top: 25px;
 }
+
+.slider_btn_list {
+    list-style: none;
+    display: flex;
+}
+
+.slider_btn_active {
+    background: #272727 !important;
+}
+
+.slider_btn_list li {
+    cursor: pointer;
+    margin-right: 20px;
+    width: 15px;
+    height: 15px;
+    background: #324b4f80;
+    border-radius: 50%;
+}
+
+.slider_btn_list li:last-child {
+    margin-right: 0;
+}
+
+
+
 
 .benefits_cards_container {
     margin-top: 40px;
