--- a/css/main_page.css
+++ b/css/main_page.css
@@ -36,7 +36,6 @@ main {
     max-width: 367px;
     width: 100%;
     height: 343px;
-    background-image: url('../img/online_meetings.png');
 }
 
 .course_type_container {
@@ -240,18 +239,16 @@ main {
 
 }
 
-.h2_test{
+.text1_test{
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
     font-size: 48px;
     line-height: 100.4%;
-
-
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 
-.h3_test {
+.text2_test {
     font-family: 'CirceRegular';
     font-style: normal;
     font-weight: 400;
@@ -348,7 +345,7 @@ color: #FFFFFF;
     margin-top: 64px;
 }
 
-.rewiews {
+.rewievs {
     margin-top: 64px;
     font-family: 'Montserrat';
     font-style: normal;
