--- a/css/login&registration.css
+++ b/css/login&registration.css
@@ -1,4 +1,5 @@
 .main_container {
+    margin-top: 166px;
     max-width: 366px;
     width: 100%;
     margin: 0 auto;
@@ -17,6 +18,11 @@
 .data_text {
     font-family: 'CirceRegular';
 }
+
+.mt5 {
+    margin-top: 5px;
+}
+
 
 .enter_data_field {
     border-radius: 5px;
@@ -74,11 +80,13 @@
     display: flex;
     margin-top: 20px;
     font-family: 'Montserrat';
+    font-size: 16px;
     margin-bottom: 160px;
 }
 
 .registration_button {
     font-family: 'Montserrat';
+    font-size: 16px;
     text-decoration: underline;
     margin-left: 4px;
     border: 0;
@@ -90,7 +98,7 @@
     font-family: 'CirceRegular';
     cursor: pointer;
     font-size: 24px;
-    margin-top: 44px;
+    margin-top: 16px;
     border: 0;
     background-color: #D9D9D9;
     border-radius: 25px;
