--- a/css/headerS&footer.css
+++ b/css/headerS&footer.css
@@ -1,10 +1,114 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.header{
-    margin-top: 40px;
-    margin-bottom: 58px;
-    max-width: 656px;
+body {
+  margin: 0 auto;
+  width: 1140px;
 }
+
+.header,
+.footer {
+  background: #f8f8f8;
+}
+
+/* ---HEADER--- */
+
+.header {
+  margin-top: 70px;
+  margin-bottom: 69px;
+}
+
+.header_container {
+  display: flex;
+}
+
+.header_search {
+  position: relative;
+  margin-left: 387px;
+}
+
+.header_search input {
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 24px;
+  width: 753px;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 8px;
+  border-radius: 4px;
+  border: 1px solid #666666;
+}
+
+.header_search input::placeholder {
+  color: #cccccc;
+}
+
+.header_search img {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+}
+
+/* ---HEADER--- */
+
+/* ---FOOTER--- */
+
+.footer {
+  display: flex;
+  justify-content: space-between; /* ВЕРНИСЬ СЮДА */
+  margin-bottom: 70px;
+}
+
+.footer_box {
+}
+
+.footer_box_title {
+  font-family: "Montserrat";
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+.footer_box_list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.footer_box_list_item,
+.footer_info_subtitle,
+.footer_info_text {
+  text-decoration: none;
+  font-family: "Circe";
+  font-size: 24px;
+  line-height: 35px;
+  color: #000000;
+}
+
+.footer_navigate img {
+  width: 270.5px;
+  height: 182px;
+}
+
+.footer_info {
+  width: 463px;
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_info_box {
+  display: flex;
+  gap: 20px;
+}
+
+.footer_info_text {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+/* ---FOOTER--- */
