--- a/css/current_courses.css
+++ b/css/current_courses.css
@@ -1,15 +1,77 @@
 body {
-    max-width: 1140px;
-    margin: 0 auto;
-  }
+  background-color: #F8F8F8;
+}
 
-.container_curent_courses {
-  /* margin: 150px auto; */
+
+.main_container {
+  margin: 221px auto 339px auto;
+  height: 566px;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 8px;
-  width: 1440px;
-  height: 1000px;
+  max-width: 1340px;
+  justify-content: space-between;
+}
+
+.idk_buttons_container {
+  cursor: pointer;
+  width: 45px;
+  height: 285px;
+  vertical-align: middle;
+  align-content: space-between;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.current_task_container {
+  width: 203px;
+  height: 368px;
+  background-color: white;
+  filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.1)) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
+  border-radius: 4px;
+}
+
+.task_content_container {
+  max-width: 1058px;
+  width: 100%;
+  height: 566px;
+  background: #D9D9D9;
+  border-radius: 5px;
+}
+
+.tasks li {
+  list-style: none;
+  cursor: pointer;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 8px;
+}
+
+.active_task {
+  background-color: #008B9B;
+  color: #FAFAFA;
+}
+
+.task_name {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  color: #FAFAFA;
+  max-width: 1033px;
+  width: 100%;
+  background: #0D8492;
+  height: 29px;
+  padding: 20px 0 20px 25px;
+}
+
+.task_description {
+  font-family: 'CirceRegular';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 29px;
+  margin-top: 20px;
+  margin-left: 5px;
 }
