--- a/css/main_page.css
+++ b/css/main_page.css
@@ -345,7 +345,7 @@ main {
     margin-top: 64px;
 }
 
-.rewievs {
+.reviews {
     margin-top: 64px;
     font-family: 'Montserrat';
     font-style: normal;
@@ -399,7 +399,7 @@ main {
     line-height: 14px;
 }
 
-.reviewer_rewie {
+.reviewer_reviwe {
     margin-top: 6px;
     font-family: 'CirceRegular';
     font-style: normal;
