--- a/css/headerM&footer.css
+++ b/css/headerM&footer.css
@@ -3,13 +3,8 @@
   padding: 0;
 }
 
-body {
-  margin: 0 auto;
-  width: 1140px;
-}
-
-.header,
-.footer {
+header,
+footer {
   background: #f8f8f8;
 }
 
@@ -17,7 +12,8 @@ body {
 .header {
   display: flex;
   justify-content: end;
-  margin: 50px 0px;
+  margin: 50px auto;
+  width: 1140px;
 }
 
 .header_menu {
@@ -59,7 +55,8 @@ body {
 .footer {
   display: flex;
   justify-content: space-between; /* ВЕРНИСЬ СЮДА */
-  margin-bottom: 70px;
+  width: 1140px;
+  margin: 0 auto 70px;
 }
 
 .footer_box {
