--- a/css/current_courses.css
+++ b/css/current_courses.css
@@ -14,7 +14,7 @@ body {
 .idk_buttons_container {
   cursor: pointer;
   width: 45px;
-  height: 285px;
+  height: 225px;
   vertical-align: middle;
   align-content: space-between;
   display: flex;
@@ -35,6 +35,7 @@ body {
   height: 566px;
   background: #D9D9D9;
   border-radius: 5px;
+
 }
 
 .tasks li {
@@ -68,10 +69,14 @@ body {
 
 .task_description {
   font-family: 'CirceRegular';
+  max-height: 475px;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 29px;
   margin-top: 20px;
   margin-left: 5px;
+  margin-right: 5px;
+  overflow-wrap: break-word;
+  overflow-y: scroll;
 }
