--- a/css/login&registration.css
+++ b/css/login&registration.css
@@ -1,7 +1,7 @@
 .main_container {
     max-width: 366px;
     width: 100%;
-    margin: 0 auto;
+    margin: 166px auto 0 auto;
     display: flex;
     flex-direction: column;
 }
