--- a/css/main_page.css
+++ b/css/main_page.css
@@ -12,6 +12,7 @@ main {
     max-width: 1440px;
     width: 100%;
     height: 538px;
+    margin: 0 auto;
     background: linear-gradient(90deg, #360033 0%, #0B8793 100%);
 }
 
