--- a/css/headerM&footer.css
+++ b/css/headerM&footer.css
@@ -5,15 +5,16 @@
 
 header,
 footer {
-  background: #f8f8f8;
+  background: linear-gradient(90deg, #360033 0%, #0b8793 100%);
 }
 
 /* HEADER */
 .header {
   display: flex;
   justify-content: end;
-  margin: 50px auto;
+  margin: 0 auto;
   width: 1140px;
+  padding: 19px 0px;
 }
 
 .header_menu {
@@ -29,16 +30,16 @@ footer {
 }
 
 .header_menu_box_link,
-.reg_btn {
+.header_menu_action {
   font-family: "Circe";
   font-size: 32px;
   line-height: 47px;
-  color: #101010;
+  color: #ffffff;
   text-decoration: none;
 }
 
-.reg_btn {
-  background: #008b9b;
+.header_menu_action {
+  background: #ffffff;
   border: 1px solid #000000;
   border-radius: 25px;
   display: flex;
@@ -46,8 +47,9 @@ footer {
   align-items: center;
   font-size: 16px;
   line-height: 24px;
-  color: #ffffff;
+  color: #232222;
   padding: 10px 15px;
+  width: 172px;
 }
 /* HEADER */
 
@@ -56,7 +58,8 @@ footer {
   display: flex;
   justify-content: space-between; /* ВЕРНИСЬ СЮДА */
   width: 1140px;
-  margin: 0 auto 70px;
+  margin: 0 auto;
+  padding: 30px 0 34px;
 }
 
 .footer_box {
@@ -66,7 +69,7 @@ footer {
   font-family: "Montserrat";
   font-size: 24px;
   line-height: 29px;
-  color: #000000;
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
@@ -84,11 +87,11 @@ footer {
   font-family: "Circe";
   font-size: 24px;
   line-height: 35px;
-  color: #000000;
+  color: #ffffff;
 }
 
 .footer_navigate img {
-  width: 270.5px;
+  width: 264.5px;
   height: 182px;
 }
 
@@ -102,6 +105,12 @@ footer {
 .footer_info_box {
   display: flex;
   gap: 20px;
+}
+
+.footer_info_box_item {
+  width: 76px;
+  height: 68px;
+  background: #d9d9d9;
 }
 
 .footer_info_text {
