--- a/css/profile.css
+++ b/css/profile.css
@@ -5,14 +5,13 @@
 
 body {
   background: #f8f8f8;
-  margin: 0 auto;
-  max-width: 1140px;
   font-family: "Circe";
   font-size: 20px;
 }
 
 .main {
-  margin-top: 80px;
+  max-width: 1140px;
+  margin: 80px auto 0 auto;
 }
 
 .info {
