--- a/css/headerM&footer.css
+++ b/css/headerM&footer.css
@@ -6,6 +6,7 @@
 header,
 footer {
   background: linear-gradient(90deg, #360033 0%, #0b8793 100%);
+  box-sizing: border-box;
 }
 
 /* HEADER */
@@ -14,7 +15,7 @@ footer {
   justify-content: end;
   margin: 0 auto;
   width: 1140px;
-  padding: 11px 0px 12px;
+  padding: 20px 0px;
 }
 
 .header_menu {
