--- a/css/about.css
+++ b/css/about.css
@@ -13,6 +13,7 @@ body {
 .box {
   max-width: 1140px;
   margin: 40px auto 156px;
+  display: flex;
 }
 
 .box_content {
@@ -27,6 +28,24 @@ body {
   font-family: "Montserrat";
   font-size: 40px;
   line-height: 49px;
+}
+
+/* SLIDER */
+.slider {
+  max-width: 375px;
+  margin-top: 100px;
+}
+
+.courses {
+  display: flex;
+  max-width: 375px;
+}
+
+.courses_container {
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  height: 324px;
 }
 
 .courses_line {
@@ -67,7 +86,7 @@ body {
 }
 .course_card_description {
   margin-top: 5px;
-  font-family: "CirceRegular";
+  font-family: "Circe";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -81,7 +100,6 @@ body {
 }
 
 .main_container {
-  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -115,3 +133,4 @@ body {
 .slider_btn_list li:last-child {
   margin-right: 0;
 }
+/* SLIDER */
