--- a/css/main_page.css
+++ b/css/main_page.css
@@ -12,13 +12,17 @@ main {
   background-color: #f8f8f8;
 }
 
+.back{
+  background: linear-gradient(90deg, #360033 0%, #0b8793 100%);
+}
+
 .upper_section {
   display: flex;
   max-width: 1440px;
   width: 100%;
-  height: 538px;
+  /* height: 538px; */
   margin: 0 auto;
-  background: linear-gradient(90deg, #360033 0%, #0b8793 100%);
+  
 }
 
 .arrows {
@@ -32,7 +36,7 @@ main {
   width: 100%;
   height: 308px;
   margin-left: 149px;
-  margin-top: 132px;
+  margin-top: 20px;
   font-family: "Coolvetica";
   font-style: normal;
   font-weight: 300;
@@ -44,7 +48,7 @@ main {
 
 .woman_img {
   margin-left: 19px;
-  margin-top: 132px;
+  margin-top: 20px;
   max-width: 367px;
   width: 100%;
   height: 343px;
