--- a/css/about.css
+++ b/css/about.css
@@ -38,14 +38,14 @@ body {
 
 .courses {
   display: flex;
-  max-width: 270px;
+  max-width: 310px;
 }
 
 .courses_container {
   overflow: hidden;
   display: flex;
   width: 100%;
-  height: 324px;
+  height: 402px;
 }
 
 .courses_line {
@@ -56,15 +56,11 @@ body {
 }
 
 .course_card {
-  cursor: pointer;
-  height: 306px;
-  max-width: 267px;
-  width: 100%;
+  height: 400px;
+  width: 300px;
   border: 1px solid #000000;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
-  padding: 0px 0px 15px;
-  background-color: #ffffff;
   margin-right: 20px;
 }
 
