--- a/css/current_courses.css
+++ b/css/current_courses.css
@@ -1,10 +1,9 @@
 body {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
-
 .main_container {
-  margin: 221px auto 339px auto;
+  margin: 40px auto 339px auto;
   height: 566px;
   display: flex;
   max-width: 1340px;
@@ -25,7 +24,8 @@ body {
   width: 203px;
   height: 368px;
   background-color: white;
-  filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.1)) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.1))
+    drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
   border-radius: 4px;
 }
 
@@ -33,15 +33,14 @@ body {
   max-width: 1058px;
   width: 100%;
   height: 566px;
-  background: #D9D9D9;
+  background: #d9d9d9;
   border-radius: 5px;
-
 }
 
 .tasks li {
   list-style: none;
   cursor: pointer;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -50,25 +49,25 @@ body {
 }
 
 .active_task {
-  background-color: #008B9B;
-  color: #FAFAFA;
+  background-color: #008b9b;
+  color: #fafafa;
 }
 
 .task_name {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
-  color: #FAFAFA;
+  color: #fafafa;
   max-width: 1033px;
   width: 100%;
-  background: #0D8492;
+  background: #0d8492;
   height: 29px;
   padding: 20px 0 20px 25px;
 }
 
 .task_description {
-  font-family: 'CirceRegular';
+  font-family: "CirceRegular";
   max-height: 475px;
   font-style: normal;
   font-weight: 400;
