Поправил отступы и шрифты на вход/регистрация

--- a/css/login&registration.css
+++ b/css/login&registration.css
@@ -1,7 +1,7 @@
 .main_container {
     max-width: 366px;
     width: 100%;
-    margin: 40px auto 0 auto;
+    margin: 100px auto 0 auto;
     display: flex;
     flex-direction: column;
 }
@@ -15,7 +15,7 @@
 }
 
 .data_text {
-    font-family: 'CirceRegular';
+    font-family: 'Circe';
 }
 
 .mt5 {
@@ -41,7 +41,7 @@
     color: #F42222;
     font-size: 16px;
     font-weight: 400;
-    font-family: 'CirceRegular';
+    font-family: 'Circe';
     visibility: hidden;
 }
 .input_email {
@@ -65,7 +65,7 @@
 }
 
 .enter_button {
-    font-family: 'CirceRegular';
+    font-family: 'Circe';
     cursor: pointer;
     font-size: 24px;
     margin-top: 10px;
@@ -80,7 +80,7 @@
     margin-top: 20px;
     font-family: 'Montserrat';
     font-size: 16px;
-    margin-bottom: 160px;
+    margin-bottom: 120px;
 }
 
 .registration_button {
@@ -94,7 +94,7 @@
 }
 
 .reg_button {
-    font-family: 'CirceRegular';
+    font-family: 'Circe';
     cursor: pointer;
     font-size: 24px;
     margin-top: 16px;
